--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -13,6 +13,7 @@
         <form action="/users/create-user" method="POST">
        <div class="container">
         <div class="row">
+            <div class="mt-3"><h3>Creat a new user</h3></div>
             <div class="mb-3 mt-3 col-6">
               <label for="email" class="form-label">Email address</label>
               <input type="email" class="form-control" id="email" name="email" required>
