--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -9,10 +9,10 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
+  <div class="container">
+    <div class="row">
     <div class=" user-form-container">
         <form action="/users/create-user" method="POST">
-       <div class="container">
-        <div class="row">
             <div class="mt-3"><h3>Creat a new user</h3></div>
             <div class="mb-3 mt-3 col-6">
               <label for="email" class="form-label">Email address</label>
@@ -31,9 +31,55 @@
                 <div class="col-12">
                 <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
-            </div>
-        </div>
         </form>
     </div>
+
+    <div class="table-user">
+      <h3 class="mb-3 mt-3">Table Users</h3>
+      <table class="table table-hover table-bordered" >
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Email</th>
+            <th scope="col">Username</th>
+            <th>action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>
+              <button class="btn btn-outline-warning">Edit</button>
+              <button class="btn btn-outline-danger">Delete</button>
+            </td>
+            
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>
+              <button class="btn btn-outline-warning">Edit</button>
+              <button class="btn btn-outline-danger">Delete</button>
+            </td>
+            
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>
+              <button class="btn btn-outline-warning">Edit</button>
+              <button class="btn btn-outline-danger">Delete</button>
+            </td>
+            
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
 </body>
 </html>
