Finish render data

--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -46,36 +46,18 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>
-              <button class="btn btn-outline-warning">Edit</button>
-              <button class="btn btn-outline-danger">Delete</button>
-            </td>
-            
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>
-              <button class="btn btn-outline-warning">Edit</button>
-              <button class="btn btn-outline-danger">Delete</button>
-            </td>
-            
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>
-              <button class="btn btn-outline-warning">Edit</button>
-              <button class="btn btn-outline-danger">Delete</button>
-            </td>
-            
-          </tr>
+          <% usersList.forEach(function(item,index){ %>
+            <tr>
+              <th scope="row"> <%= index +1 %></th>
+              <td><%=item.username %></td>
+              <td><%=item.email %></td>
+              <td>
+                <button class="btn btn-outline-warning">Edit</button>
+                <button class="btn btn-outline-danger">Delete</button>
+              </td>
+            </tr>
+        <% }) %>
+          
         </tbody>
       </table>
     </div>
