--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -39,7 +39,7 @@
       <table class="table table-hover table-bordered" >
         <thead>
           <tr>
-            <th scope="col">#</th>
+            <th scope="col">ID</th>
             <th scope="col">Email</th>
             <th scope="col">Username</th>
             <th>action</th>
@@ -48,12 +48,17 @@
         <tbody>
           <% usersList.forEach(function(item,index){ %>
             <tr>
-              <th scope="row"> <%= index +1 %></th>
+              <th scope="row"> <%= item.id %></th>
               <td><%=item.username %></td>
               <td><%=item.email %></td>
               <td>
                 <button class="btn btn-outline-warning">Edit</button>
-                <button class="btn btn-outline-danger">Delete</button>
+                <form style="display: inline;" action="delete-user/<%= item.id %>" method="POST">
+                  <button class="btn btn-outline-danger" type="submit">
+                    Delete
+                  </button>
+                </form>
+                
               </td>
             </tr>
         <% }) %>
