--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -49,10 +49,15 @@
           <% usersList.forEach(function(item,index){ %>
             <tr>
               <th scope="row"> <%= item.id %></th>
-              <td><%=item.username %></td>
               <td><%=item.email %></td>
+              <td><%=item.username %></td>
               <td>
-                <button class="btn btn-outline-warning">Edit</button>
+                <form style="display: inline;" action="update-user/<%= item.id %>" method="POST">
+                  <button class="btn btn-outline-warning" type="submit">
+                    Edit
+                  </button>
+                </form>
+                
                 <form style="display: inline;" action="delete-user/<%= item.id %>" method="POST">
                   <button class="btn btn-outline-danger" type="submit">
                     Delete
